CAS output overlap fix for Expand tool
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@53117 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -2549,8 +2549,8 @@ body.application[dir=rtl] .GeoGebraMenuBar table {
 }
 
 .CAS_commentLabel {
-	position: absolute;
-	top:~"calc(50% - 10px)";
+	display: inline;
+	vertical-align:middle;
 	color: gray;
 	float: left;
 	padding-left: 5px;
@@ -2562,7 +2562,8 @@ body.application[dir=rtl] .GeoGebraMenuBar table {
 }
 
 .CAS_outputPanel canvas{
-	margin-left: 30px;
+	display: inline;
+	vertical-align: middle;
 }
 
 .CAS_outputPanel {
